# markdown-svg

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MARKDOWN_SVG_DEPENDENCIES.md  Makefile  README.md  pyproject.toml  railway.json  requirements.txt
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml
docs/usage-examples/: basic.py  custom_style.py  measure_and_render.py
docs/usage-examples/output/: .gitkeep
examples/: basic.md  blockquotes.md  blogpost.md  code.md  custom_style.py  formatting.md  headings.md  images.md  kitchen-sink.md  lists.md  measure_and_render.py  readme.md  tables.md
notes/: INITIAL_PLAN.md  SYNTAX_HIGHLIGHTING_PLAN.md
playground/: README.md  generate_svgs.py  index.html  server.py
playground/examples/: basic.md  formatting.md  headings.md  images.md  kitchen-sink.md  readme.md
src/mdsvg/: __init__.py  fonts.py  images.py  measure.py  parser.py  playground.py  renderer.py  style.py  types.py  utils.py
tests/: __init__.py  test_fonts.py  test_integration.py  test_measure.py  test_parser.py  test_renderer.py
tests/fixtures/: sample.md
