[project]
name = "markdown-svg"
version = "0.6.1"
description = "Convert Markdown to SVG with automatic text wrapping"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.9"
authors = [{ name = "Dave Fowler" }]
keywords = ["markdown", "svg", "text", "rendering", "visualization"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Text Processing :: Markup :: Markdown",
    "Topic :: Multimedia :: Graphics :: Graphics Conversion",
    "Typing :: Typed",
]
dependencies = ["fonttools>=4.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0", "pytest-cov>=4.0", "mypy>=1.0", "ruff>=0.1.0"]
highlight = ["pygments"]
images = ["pillow>=9.0", "requests>=2.28"]  # For fetching image dimensions
playground = []  # No extra deps needed - uses built-in http.server

[project.scripts]
mdsvg-playground = "mdsvg.playground:main"

[project.urls]
Homepage = "https://github.com/davefowler/markdown-svg"
Documentation = "https://github.com/davefowler/markdown-svg#readme"
Repository = "https://github.com/davefowler/markdown-svg"
Issues = "https://github.com/davefowler/markdown-svg/issues"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mdsvg"]

[tool.hatch.build.targets.sdist]
include = [
    "/src",
    "/playground",
    "/tests",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.mypy]
python_version = "3.9"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "B", "C4", "SIM"]
ignore = ["E501"]  # Line too long - handled by formatter

